fixed the About page spacing

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -174,12 +174,13 @@ body {
   }
 
   .candy-box {
-    height: 300px;
+    height: 420px;
     padding-left: 20px;
     padding-right: 20px;
   }
 
   .music-box {
+    height: 400px;
     padding-left: 20px;
     padding-right: 20px;
   }
